@@ -54,6 +54,7 @@ TODO :
 	all : added --display classes and --display keywords
 	all : fixed issue with optional parameters in inline functions
 	all : allow implementing interfaces with inline methods
+	all : enable inlining for getter/setter/iterator/resolve/using
 
 2009-03-22: 2.03
 	optimized Type.enumEq : use index instead of tag comparison for neko/flash9/php
